# knowledge-agent

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.vector-store/af9a08f1-32e3-4615-8444-deb8e87b71a9/: index_metadata.pickle
knowledge_agent/: __init__.py
knowledge_agent/cli/: main.py
knowledge_agent/core/: code_analysis.py  code_parser.py  conversation.py  doc_parser.py  documentation.py  ingestion.py  llm.py  logging.py  memory.py  repo_manager.py  retrieval.py  role_manager.py  role_prompts.py  suggestions.py  vector_store.py  version_control.py
tests/: __init__.py  conftest.py  test_doc_parsers.py  test_documentation.py  test_memory.py  test_retrieval.py  test_role_prompts.py
